# transmission

./: CMakeLists.txt  ChangeLog.md  README.md
cli/: CMakeLists.txt  cli.c
cmake/: FindPolarSSL.cmake  TrMacros.cmake
cmake.switch/: FindLIBNX.cmake  devkita64-libnx.cmake
daemon/: remote.c
libtransmission/: CMakeLists.txt  announcer-udp.c  fdlimit.c  file-posix.c  log.c  makemeta.c  net.c  net.h  platform-quota.c  platform.c  quark.c  quark.h  session.c  session.h  torrent.c  tr-dht.c  transmission.h  trevent.c  utils.c  utils.h  verify.c  web.c
qt/: DetailsDialog.cc
qt/translations/: transmission_ko.ts
switch/: CMakeLists.txt  nxtransmission.c  settings.json
